[gd_scene load_steps=4 format=2]

[ext_resource path="res://game_objects/brick.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33.5, 12 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 11.5 )

[node name="Brick" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="DetectorShape" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource( 2 )

[node name="BrickStaticBody2D" type="StaticBody2D" parent="."]
unique_name_in_owner = true

[node name="StaticBodyCollisionShape" type="CollisionShape2D" parent="BrickStaticBody2D"]
unique_name_in_owner = true
shape = SubResource( 1 )

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
